Fix centering on firefox-based browsers (#44)

--- a/src/app/user-management/user-management.component.css
+++ b/src/app/user-management/user-management.component.css
@@ -7,7 +7,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   display: grid;
-  justify-self: center;
+  justify-items: center;
 }
 
 .main-header {
